# ceemdan-forecaster

./: .gitignore  README.md  pyproject.toml  run_gui.py
conf/base/: catalog.yml  mlflow.yml  parameters.yml
conf/production/: parameters.yml
conf/quick_test/: parameters.yml
conf/standard/: parameters.yml
gui/: __init__.py  app.py  charts.py  config_manager.py  mlflow_client.py  pipeline_runner.py  presets.py
src/ceemdan_forecaster/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/ceemdan_forecaster/datasets/: __init__.py  pytorch_checkpoint.py
src/ceemdan_forecaster/hooks/: __init__.py  gpu_hooks.py  mlflow_hooks.py
src/ceemdan_forecaster/pipelines/backtest/: __init__.py  nodes.py  pipeline.py
src/ceemdan_forecaster/pipelines/classification/: __init__.py  nodes.py  pipeline.py
src/ceemdan_forecaster/pipelines/data_loading/: __init__.py  nodes.py  pipeline.py
src/ceemdan_forecaster/pipelines/data_split/: __init__.py  nodes.py  pipeline.py
src/ceemdan_forecaster/pipelines/decomposition/: __init__.py  nodes.py  pipeline.py
src/ceemdan_forecaster/pipelines/evaluation/: __init__.py  nodes.py  pipeline.py
src/ceemdan_forecaster/pipelines/inference/: __init__.py  nodes.py  pipeline.py
src/ceemdan_forecaster/pipelines/preprocessing/: __init__.py  nodes.py  pipeline.py
src/ceemdan_forecaster/pipelines/training/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py
