[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "ceemdan_forecaster"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
ceemdan-forecaster = "ceemdan_forecaster.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.12.0",]
gui = [ "gradio>=4.0.0", "plotly>=5.0.0",]

[tool.kedro]
package_name = "ceemdan_forecaster"
project_name = "ceemdan_forecaster"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "-ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[tool.setuptools.dynamic.version]
attr = "ceemdan_forecaster.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
